-- ================================================
-- イミュータブルデータモデル DDL
-- プロジェクト記録システム
-- 生成日時: 2026-01-10
-- ================================================

-- ================================================
-- リソーステーブル
-- ================================================

-- プロジェクトテーブル
CREATE TABLE PROJECT (
    ProjectID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectName VARCHAR(200) NOT NULL,
    CustomerID INTEGER NOT NULL,
    EstimatedEffort DECIMAL(10,2),
    PlannedStartDate DATE,
    PlannedEndDate DATE,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE PROJECT IS 'プロジェクト';
COMMENT ON COLUMN PROJECT.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PROJECT.ProjectName IS 'プロジェクト名';
COMMENT ON COLUMN PROJECT.CustomerID IS '顧客ID';
COMMENT ON COLUMN PROJECT.EstimatedEffort IS '受注規模';
COMMENT ON COLUMN PROJECT.PlannedStartDate IS '計画開始日';
COMMENT ON COLUMN PROJECT.PlannedEndDate IS '計画終了日';
COMMENT ON COLUMN PROJECT.CreatedAt IS '作成日時';

-- 人テーブル
CREATE TABLE PERSON (
    PersonID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    Name VARCHAR(100) NOT NULL,
    Email VARCHAR(100),
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE PERSON IS '人';
COMMENT ON COLUMN PERSON.PersonID IS '人ID';
COMMENT ON COLUMN PERSON.Name IS '氏名';
COMMENT ON COLUMN PERSON.Email IS 'メールアドレス';
COMMENT ON COLUMN PERSON.CreatedAt IS '作成日時';

-- 組織テーブル
CREATE TABLE ORGANIZATION (
    OrganizationID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    OrganizationName VARCHAR(100) NOT NULL,
    OrganizationType VARCHAR(50),
    ParentOrganizationID INTEGER,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_ORGANIZATION_PARENT FOREIGN KEY (ParentOrganizationID)
        REFERENCES ORGANIZATION(OrganizationID) ON DELETE RESTRICT
);

COMMENT ON TABLE ORGANIZATION IS '組織';
COMMENT ON COLUMN ORGANIZATION.OrganizationID IS '組織ID';
COMMENT ON COLUMN ORGANIZATION.OrganizationName IS '組織名';
COMMENT ON COLUMN ORGANIZATION.OrganizationType IS '組織種別';
COMMENT ON COLUMN ORGANIZATION.ParentOrganizationID IS '親組織ID';
COMMENT ON COLUMN ORGANIZATION.CreatedAt IS '作成日時';

-- 顧客テーブル
CREATE TABLE CUSTOMER (
    CustomerID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    CustomerName VARCHAR(200) NOT NULL,
    IndustryID INTEGER,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE CUSTOMER IS '顧客';
COMMENT ON COLUMN CUSTOMER.CustomerID IS '顧客ID';
COMMENT ON COLUMN CUSTOMER.CustomerName IS '顧客名';
COMMENT ON COLUMN CUSTOMER.IndustryID IS '業界ID';
COMMENT ON COLUMN CUSTOMER.CreatedAt IS '作成日時';

-- 業界テーブル
CREATE TABLE INDUSTRY (
    IndustryID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    IndustryName VARCHAR(100) NOT NULL,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE INDUSTRY IS '業界';
COMMENT ON COLUMN INDUSTRY.IndustryID IS '業界ID';
COMMENT ON COLUMN INDUSTRY.IndustryName IS '業界名';
COMMENT ON COLUMN INDUSTRY.CreatedAt IS '作成日時';

-- 役割テーブル
CREATE TABLE ROLE (
    RoleID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    RoleName VARCHAR(50) NOT NULL,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE ROLE IS '役割';
COMMENT ON COLUMN ROLE.RoleID IS '役割ID';
COMMENT ON COLUMN ROLE.RoleName IS '役割名';
COMMENT ON COLUMN ROLE.CreatedAt IS '作成日時';

-- 支援タイプテーブル
CREATE TABLE SUPPORT_TYPE (
    SupportTypeID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    SupportTypeName VARCHAR(100) NOT NULL,
    Description TEXT,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE SUPPORT_TYPE IS '支援タイプ';
COMMENT ON COLUMN SUPPORT_TYPE.SupportTypeID IS '支援タイプID';
COMMENT ON COLUMN SUPPORT_TYPE.SupportTypeName IS '支援タイプ名';
COMMENT ON COLUMN SUPPORT_TYPE.Description IS '説明';
COMMENT ON COLUMN SUPPORT_TYPE.CreatedAt IS '作成日時';

-- ユーザーテーブル
CREATE TABLE USER_ACCOUNT (
    UserID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    PersonID INTEGER NOT NULL,
    Username VARCHAR(50) NOT NULL,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_USER_PERSON FOREIGN KEY (PersonID)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE USER_ACCOUNT IS 'ユーザー';
COMMENT ON COLUMN USER_ACCOUNT.UserID IS 'ユーザーID';
COMMENT ON COLUMN USER_ACCOUNT.PersonID IS '人ID';
COMMENT ON COLUMN USER_ACCOUNT.Username IS 'ユーザー名';
COMMENT ON COLUMN USER_ACCOUNT.CreatedAt IS '作成日時';

-- 開発種別テーブル
CREATE TABLE DEVELOPMENT_TYPE (
    DevelopmentTypeID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    DevelopmentTypeName VARCHAR(100) NOT NULL,
    Description TEXT,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE DEVELOPMENT_TYPE IS '開発種別';
COMMENT ON COLUMN DEVELOPMENT_TYPE.DevelopmentTypeID IS '開発種別ID';
COMMENT ON COLUMN DEVELOPMENT_TYPE.DevelopmentTypeName IS '開発種別名';
COMMENT ON COLUMN DEVELOPMENT_TYPE.Description IS '説明';
COMMENT ON COLUMN DEVELOPMENT_TYPE.CreatedAt IS '作成日時';

-- 開発方式テーブル
CREATE TABLE DEVELOPMENT_METHOD (
    DevelopmentMethodID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    DevelopmentMethodName VARCHAR(100) NOT NULL,
    Description TEXT,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE DEVELOPMENT_METHOD IS '開発方式';
COMMENT ON COLUMN DEVELOPMENT_METHOD.DevelopmentMethodID IS '開発方式ID';
COMMENT ON COLUMN DEVELOPMENT_METHOD.DevelopmentMethodName IS '開発方式名';
COMMENT ON COLUMN DEVELOPMENT_METHOD.Description IS '説明';
COMMENT ON COLUMN DEVELOPMENT_METHOD.CreatedAt IS '作成日時';

-- 対象工程テーブル
CREATE TABLE TARGET_PHASE (
    TargetPhaseID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    TargetPhaseName VARCHAR(100) NOT NULL,
    Description TEXT,
    CreatedAt TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE TARGET_PHASE IS '対象工程';
COMMENT ON COLUMN TARGET_PHASE.TargetPhaseID IS '対象工程ID';
COMMENT ON COLUMN TARGET_PHASE.TargetPhaseName IS '対象工程名';
COMMENT ON COLUMN TARGET_PHASE.Description IS '説明';
COMMENT ON COLUMN TARGET_PHASE.CreatedAt IS '作成日時';

-- 外部キー制約（リソーステーブル）
ALTER TABLE PROJECT ADD CONSTRAINT FK_PROJECT_CUSTOMER
    FOREIGN KEY (CustomerID) REFERENCES CUSTOMER(CustomerID) ON DELETE RESTRICT;

ALTER TABLE CUSTOMER ADD CONSTRAINT FK_CUSTOMER_INDUSTRY
    FOREIGN KEY (IndustryID) REFERENCES INDUSTRY(IndustryID) ON DELETE RESTRICT;

-- ================================================
-- ジャンクションテーブル（多対多関係）
-- ================================================

-- プロジェクト開発種別テーブル
CREATE TABLE PROJECT_DEVELOPMENT_TYPE (
    ProjectID INTEGER NOT NULL,
    DevelopmentTypeID INTEGER NOT NULL,
    PRIMARY KEY (ProjectID, DevelopmentTypeID),
    CONSTRAINT FK_PDT_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PDT_DEVELOPMENT_TYPE FOREIGN KEY (DevelopmentTypeID)
        REFERENCES DEVELOPMENT_TYPE(DevelopmentTypeID) ON DELETE RESTRICT
);

COMMENT ON TABLE PROJECT_DEVELOPMENT_TYPE IS 'プロジェクト開発種別';
COMMENT ON COLUMN PROJECT_DEVELOPMENT_TYPE.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PROJECT_DEVELOPMENT_TYPE.DevelopmentTypeID IS '開発種別ID';

-- プロジェクト開発方式テーブル
CREATE TABLE PROJECT_DEVELOPMENT_METHOD (
    ProjectID INTEGER NOT NULL,
    DevelopmentMethodID INTEGER NOT NULL,
    PRIMARY KEY (ProjectID, DevelopmentMethodID),
    CONSTRAINT FK_PDM_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PDM_DEVELOPMENT_METHOD FOREIGN KEY (DevelopmentMethodID)
        REFERENCES DEVELOPMENT_METHOD(DevelopmentMethodID) ON DELETE RESTRICT
);

COMMENT ON TABLE PROJECT_DEVELOPMENT_METHOD IS 'プロジェクト開発方式';
COMMENT ON COLUMN PROJECT_DEVELOPMENT_METHOD.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PROJECT_DEVELOPMENT_METHOD.DevelopmentMethodID IS '開発方式ID';

-- プロジェクト対象工程テーブル
CREATE TABLE PROJECT_TARGET_PHASE (
    ProjectID INTEGER NOT NULL,
    TargetPhaseID INTEGER NOT NULL,
    PRIMARY KEY (ProjectID, TargetPhaseID),
    CONSTRAINT FK_PTP_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PTP_TARGET_PHASE FOREIGN KEY (TargetPhaseID)
        REFERENCES TARGET_PHASE(TargetPhaseID) ON DELETE RESTRICT
);

COMMENT ON TABLE PROJECT_TARGET_PHASE IS 'プロジェクト対象工程';
COMMENT ON COLUMN PROJECT_TARGET_PHASE.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PROJECT_TARGET_PHASE.TargetPhaseID IS '対象工程ID';

-- ================================================
-- イベントテーブル
-- ================================================

-- プロジェクト開始イベント
CREATE TABLE PROJECT_START (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    StartDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    RegisteredBy INTEGER NOT NULL,
    CONSTRAINT FK_PROJECT_START_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PROJECT_START_PERSON FOREIGN KEY (RegisteredBy)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE PROJECT_START IS 'プロジェクト開始イベント';
COMMENT ON COLUMN PROJECT_START.EventID IS 'イベントID';
COMMENT ON COLUMN PROJECT_START.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PROJECT_START.StartDateTime IS '開始日時';
COMMENT ON COLUMN PROJECT_START.RegisteredBy IS '登録者ID';

-- 組織参画イベント
CREATE TABLE ORGANIZATION_JOIN (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    OrganizationID INTEGER NOT NULL,
    JoinDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    RegisteredBy INTEGER NOT NULL,
    CONSTRAINT FK_ORGANIZATION_JOIN_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_ORGANIZATION_JOIN_ORG FOREIGN KEY (OrganizationID)
        REFERENCES ORGANIZATION(OrganizationID) ON DELETE RESTRICT,
    CONSTRAINT FK_ORGANIZATION_JOIN_PERSON FOREIGN KEY (RegisteredBy)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE ORGANIZATION_JOIN IS '組織参画イベント';
COMMENT ON COLUMN ORGANIZATION_JOIN.EventID IS 'イベントID';
COMMENT ON COLUMN ORGANIZATION_JOIN.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN ORGANIZATION_JOIN.OrganizationID IS '組織ID';
COMMENT ON COLUMN ORGANIZATION_JOIN.JoinDateTime IS '参画日時';
COMMENT ON COLUMN ORGANIZATION_JOIN.RegisteredBy IS '登録者ID';

-- 担当者アサインイベント
CREATE TABLE PERSON_ASSIGN (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    PersonID INTEGER NOT NULL,
    RoleID INTEGER NOT NULL,
    AssignDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    RegisteredBy INTEGER NOT NULL,
    CONSTRAINT FK_PERSON_ASSIGN_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_ASSIGN_PERSON FOREIGN KEY (PersonID)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_ASSIGN_ROLE FOREIGN KEY (RoleID)
        REFERENCES ROLE(RoleID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_ASSIGN_REGISTERED FOREIGN KEY (RegisteredBy)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE PERSON_ASSIGN IS '担当者アサインイベント';
COMMENT ON COLUMN PERSON_ASSIGN.EventID IS 'イベントID';
COMMENT ON COLUMN PERSON_ASSIGN.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PERSON_ASSIGN.PersonID IS '人ID';
COMMENT ON COLUMN PERSON_ASSIGN.RoleID IS '役割ID';
COMMENT ON COLUMN PERSON_ASSIGN.AssignDateTime IS 'アサイン日時';
COMMENT ON COLUMN PERSON_ASSIGN.RegisteredBy IS '登録者ID';

-- 担当者交代イベント
CREATE TABLE PERSON_REPLACE (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    OldPersonID INTEGER NOT NULL,
    NewPersonID INTEGER NOT NULL,
    RoleID INTEGER NOT NULL,
    ReplaceDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    RegisteredBy INTEGER NOT NULL,
    CONSTRAINT FK_PERSON_REPLACE_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_REPLACE_OLD FOREIGN KEY (OldPersonID)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_REPLACE_NEW FOREIGN KEY (NewPersonID)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_REPLACE_ROLE FOREIGN KEY (RoleID)
        REFERENCES ROLE(RoleID) ON DELETE RESTRICT,
    CONSTRAINT FK_PERSON_REPLACE_REGISTERED FOREIGN KEY (RegisteredBy)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE PERSON_REPLACE IS '担当者交代イベント';
COMMENT ON COLUMN PERSON_REPLACE.EventID IS 'イベントID';
COMMENT ON COLUMN PERSON_REPLACE.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PERSON_REPLACE.OldPersonID IS '旧担当者ID';
COMMENT ON COLUMN PERSON_REPLACE.NewPersonID IS '新担当者ID';
COMMENT ON COLUMN PERSON_REPLACE.RoleID IS '役割ID';
COMMENT ON COLUMN PERSON_REPLACE.ReplaceDateTime IS '交代日時';
COMMENT ON COLUMN PERSON_REPLACE.RegisteredBy IS '登録者ID';

-- リスク評価イベント
CREATE TABLE RISK_EVALUATE (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    RiskRank VARCHAR(20),
    EvaluateDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    EvaluatedBy INTEGER NOT NULL,
    IsSystemProposed BOOLEAN DEFAULT FALSE,
    IsManualAdjusted BOOLEAN DEFAULT FALSE,
    CONSTRAINT FK_RISK_EVALUATE_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_RISK_EVALUATE_PERSON FOREIGN KEY (EvaluatedBy)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE RISK_EVALUATE IS 'リスク評価イベント';
COMMENT ON COLUMN RISK_EVALUATE.EventID IS 'イベントID';
COMMENT ON COLUMN RISK_EVALUATE.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN RISK_EVALUATE.RiskRank IS 'リスクランク';
COMMENT ON COLUMN RISK_EVALUATE.EvaluateDateTime IS '評価日時';
COMMENT ON COLUMN RISK_EVALUATE.EvaluatedBy IS '評価者ID';
COMMENT ON COLUMN RISK_EVALUATE.IsSystemProposed IS 'システム提案フラグ';
COMMENT ON COLUMN RISK_EVALUATE.IsManualAdjusted IS '手動調整フラグ';

-- 支援実施イベント
CREATE TABLE SUPPORT_EXECUTE (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    SupportTypeID INTEGER NOT NULL,
    SupportPersonID INTEGER NOT NULL,
    ExecuteDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    SupportContent TEXT,
    Outcome TEXT,
    Memo TEXT,
    CONSTRAINT FK_SUPPORT_EXECUTE_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_SUPPORT_EXECUTE_TYPE FOREIGN KEY (SupportTypeID)
        REFERENCES SUPPORT_TYPE(SupportTypeID) ON DELETE RESTRICT,
    CONSTRAINT FK_SUPPORT_EXECUTE_PERSON FOREIGN KEY (SupportPersonID)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE SUPPORT_EXECUTE IS '支援実施イベント';
COMMENT ON COLUMN SUPPORT_EXECUTE.EventID IS 'イベントID';
COMMENT ON COLUMN SUPPORT_EXECUTE.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN SUPPORT_EXECUTE.SupportTypeID IS '支援タイプID';
COMMENT ON COLUMN SUPPORT_EXECUTE.SupportPersonID IS '支援担当者ID';
COMMENT ON COLUMN SUPPORT_EXECUTE.ExecuteDateTime IS '実施日時';
COMMENT ON COLUMN SUPPORT_EXECUTE.SupportContent IS '支援内容';
COMMENT ON COLUMN SUPPORT_EXECUTE.Outcome IS '成果';
COMMENT ON COLUMN SUPPORT_EXECUTE.Memo IS 'メモ';

-- プロジェクト完了イベント
CREATE TABLE PROJECT_COMPLETE (
    EventID INTEGER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    ProjectID INTEGER NOT NULL,
    CompleteDateTime TIMESTAMP WITH TIME ZONE NOT NULL,
    ActualEffort DECIMAL(10,2),
    RegisteredBy INTEGER NOT NULL,
    CONSTRAINT FK_PROJECT_COMPLETE_PROJECT FOREIGN KEY (ProjectID)
        REFERENCES PROJECT(ProjectID) ON DELETE RESTRICT,
    CONSTRAINT FK_PROJECT_COMPLETE_PERSON FOREIGN KEY (RegisteredBy)
        REFERENCES PERSON(PersonID) ON DELETE RESTRICT
);

COMMENT ON TABLE PROJECT_COMPLETE IS 'プロジェクト完了イベント';
COMMENT ON COLUMN PROJECT_COMPLETE.EventID IS 'イベントID';
COMMENT ON COLUMN PROJECT_COMPLETE.ProjectID IS 'プロジェクトID';
COMMENT ON COLUMN PROJECT_COMPLETE.CompleteDateTime IS '完了日時';
COMMENT ON COLUMN PROJECT_COMPLETE.ActualEffort IS '実績工数';
COMMENT ON COLUMN PROJECT_COMPLETE.RegisteredBy IS '登録者ID';

-- ================================================
-- インデックス（パフォーマンス最適化）
-- ================================================

-- プロジェクトインデックス
CREATE INDEX IDX_PROJECT_CUSTOMER ON PROJECT(CustomerID);
CREATE INDEX IDX_PROJECT_START_DATE ON PROJECT(PlannedStartDate);
CREATE INDEX IDX_PROJECT_END_DATE ON PROJECT(PlannedEndDate);

-- 組織インデックス
CREATE INDEX IDX_ORGANIZATION_PARENT ON ORGANIZATION(ParentOrganizationID);

-- 顧客インデックス
CREATE INDEX IDX_CUSTOMER_INDUSTRY ON CUSTOMER(IndustryID);

-- ユーザーインデックス
CREATE INDEX IDX_USER_PERSON ON USER_ACCOUNT(PersonID);

-- プロジェクト開始イベントインデックス
CREATE INDEX IDX_PROJECT_START_PROJECT ON PROJECT_START(ProjectID);
CREATE INDEX IDX_PROJECT_START_DATETIME ON PROJECT_START(StartDateTime);

-- 組織参画イベントインデックス
CREATE INDEX IDX_ORGANIZATION_JOIN_PROJECT ON ORGANIZATION_JOIN(ProjectID);
CREATE INDEX IDX_ORGANIZATION_JOIN_ORG ON ORGANIZATION_JOIN(OrganizationID);
CREATE INDEX IDX_ORGANIZATION_JOIN_DATETIME ON ORGANIZATION_JOIN(JoinDateTime);

-- 担当者アサインイベントインデックス
CREATE INDEX IDX_PERSON_ASSIGN_PROJECT ON PERSON_ASSIGN(ProjectID);
CREATE INDEX IDX_PERSON_ASSIGN_PERSON ON PERSON_ASSIGN(PersonID);
CREATE INDEX IDX_PERSON_ASSIGN_DATETIME ON PERSON_ASSIGN(AssignDateTime);

-- 担当者交代イベントインデックス
CREATE INDEX IDX_PERSON_REPLACE_PROJECT ON PERSON_REPLACE(ProjectID);
CREATE INDEX IDX_PERSON_REPLACE_OLD ON PERSON_REPLACE(OldPersonID);
CREATE INDEX IDX_PERSON_REPLACE_NEW ON PERSON_REPLACE(NewPersonID);
CREATE INDEX IDX_PERSON_REPLACE_DATETIME ON PERSON_REPLACE(ReplaceDateTime);

-- リスク評価イベントインデックス
CREATE INDEX IDX_RISK_EVALUATE_PROJECT ON RISK_EVALUATE(ProjectID);
CREATE INDEX IDX_RISK_EVALUATE_DATETIME ON RISK_EVALUATE(EvaluateDateTime);

-- 支援実施イベントインデックス
CREATE INDEX IDX_SUPPORT_EXECUTE_PROJECT ON SUPPORT_EXECUTE(ProjectID);
CREATE INDEX IDX_SUPPORT_EXECUTE_TYPE ON SUPPORT_EXECUTE(SupportTypeID);
CREATE INDEX IDX_SUPPORT_EXECUTE_PERSON ON SUPPORT_EXECUTE(SupportPersonID);
CREATE INDEX IDX_SUPPORT_EXECUTE_DATETIME ON SUPPORT_EXECUTE(ExecuteDateTime);

-- プロジェクト完了イベントインデックス
CREATE INDEX IDX_PROJECT_COMPLETE_PROJECT ON PROJECT_COMPLETE(ProjectID);
CREATE INDEX IDX_PROJECT_COMPLETE_DATETIME ON PROJECT_COMPLETE(CompleteDateTime);
